[package]
name = "rua"
version = "0.1.0"
authors = ["CurryPseudo <currypseudo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nom = "5.1.2"
logos = "0.11.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
